[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"


[dependencies]

sha2 = "0.9.1"
rust-crypto = "^0.2"

bincode = "1.3.1"
failure = "0.1.8"

chrono = "0.4"
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33"

bitcoincash-addr = "0.5.2"
rand = "0.4.6"
